# npysearch

./: README.md  pyproject.toml  setup.py
include/nsearch/: Utils.h
include/nsearch/Alignment/: ExtendAlign.h
npysearch/: __init__.py
