[build-system]
requires = [
    "setuptools>=9.0",
    "wheel>=0.22.0",
    "pybind11>=1.0",
]

build-backend = "setuptools.build_meta"

[tool.poetry]
name = "npysearch"
version = "1.3.2"
description = "Python bindings for nsearch, an efficient BLAST-like sequence comparison algorithm written in C++"
authors = ["Aditya Jeevannavar <adjeev@utu.fi>"]
license = "BSD"
readme = "README.md"
packages = [{include = "npysearch"}]

[tool.poetry.dependencies]
python = ">=3.10"
pybind11 = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
build = ">=0.10"
wheel = ">=0.40"
