[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.40",
    "pybind11>=2.0",
]

build-backend = "setuptools.build_meta"

[tool.poetry]
name = "npysearch-win"
version = "1.3.1"
description = "Windows-compatible fork of npysearch: Python bindings for nsearch, an efficient BLAST-like sequence comparison algorithm written in C++"
authors = [
    "Kirill Nikolsky <kirill.s.nikolsky@yandex.ru>",
    "Aditya Jeevannavar <adjeev@utu.fi>",
]
license = "BSD"
readme = "README.md"

# Links to the original project
[tool.poetry.urls]
"Original project (GitHub)" = "https://github.com/tamminenlab/npysearch"
"Original project (PyPI)"   = "https://test.pypi.org/project/npysearch/"

[tool.poetry.dependencies]
python = ">=3.10"
pybind11 = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
build  = ">=0.10"
wheel  = ">=0.40"
